<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_margin"
        android:gravity="center">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher_foreground" />

        <EditText
            android:id="@+id/user_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/prompt_username" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_edit"
            android:layout_marginTop="@dimen/medium_margin"
            android:hint="@string/prompt_password" />

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_edit"
            android:layout_marginTop="32dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/or" />

        <Button
            android:id="@+id/register_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or_text"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/register" />


    </RelativeLayout>
</layout>
