<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        app:cardCornerRadius="@dimen/small_margin"
        app:contentPadding="@dimen/small_margin">

        <!--ConstraintLayout used because views have to align in complex way-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/shoe_name"
                app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_edt"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/company"
                app:layout_constraintBaseline_toBaselineOf="@+id/comapny_edt"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/shoe_size"
                app:layout_constraintBaseline_toBaselineOf="@+id/show_size_edt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/description"
                app:layout_constraintBaseline_toBaselineOf="@+id/description_edt"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/shoe_name_edt"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comapny_edt"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/shoe_name_edt"
                app:layout_constraintStart_toStartOf="@+id/shoe_name_edt"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_edt" />

            <TextView
                android:id="@+id/show_size_edt"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/comapny_edt"
                app:layout_constraintStart_toStartOf="@+id/comapny_edt"
                app:layout_constraintTop_toBottomOf="@+id/comapny_edt" />

            <TextView
                android:id="@+id/description_edt"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/show_size_edt"
                app:layout_constraintStart_toStartOf="@+id/show_size_edt"
                app:layout_constraintTop_toBottomOf="@+id/show_size_edt" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>